modified the ui

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -2,7 +2,7 @@
 
 .home{
     padding-top: 30px;
-    width: 100vw;
+    width: 100%;
     background-color: $mainColor;
     display: flex;
     align-items: center;
