--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -3,7 +3,6 @@
 .navbar{
     height: 60px;
     border-bottom: 1px solid lightgrey;
-
     .wrapper{
         display: flex;
         align-items: center;
@@ -127,5 +126,12 @@
     }
     .active{
         opacity: 1;
+    }
+    .postPageContainer{
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;  
+        opacity: 0.99;
     }
 }
