--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -15,6 +15,12 @@
         .left{
             flex: 1;
             padding: 20px;
+
+            .leftImage2{
+                position: absolute;
+                top: 160px;
+                left: 444px;
+            }
             
         }
         .right{
