modified the ui

--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -48,6 +48,7 @@
                 font-size: 15px ;
                 color: $textColor;
                 column-width: 155px;
+                text-align: right;
             }
         }
         .sidebarUsers{
