--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -5,6 +5,40 @@
     border: 1px solid lightgray;
     margin-bottom: 20px;
 
+    .optionsContainer{
+        width: 400px;
+        height: 350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: white;
+        position: absolute;
+        border-radius: 10px;
+        right: 520px;
+        top: 150px;
+        cursor: pointer;
+        -webkit-box-shadow: 5px 5px 15px 4px rgba(211,211,211,0.87); 
+        box-shadow: 5px 5px 15px 4px rgba(211,211,211,0.87);
+
+        .option{
+            border-bottom: 1px solid lightgray;
+            padding: 10px;
+            text-align: center;
+            font-size: 14px;
+            color: $textColor;
+
+            .red{
+                color: red;
+            }
+            
+        }
+        .last{
+            border: none;
+        }
+    }
+    // .cancel{
+    //     opacity: 0;
+    // }
     .postHeader{
         display: flex;
         align-items: center;
@@ -27,6 +61,10 @@
                 font-size: 14px;
                 font-weight: 400;
                 cursor: pointer;
+
+                &:hover{
+                    text-decoration: underline;
+                }
             }
         }
         .postHeaderRight{
