--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -74,6 +74,7 @@
                     width: 25px;
                     border-radius: 50%;
                     cursor: pointer;
+                    object-fit: cover;
                 }
             }
             
