--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -19,7 +19,7 @@
             .leftImage2{
                 position: absolute;
                 top: 160px;
-                left: 444px;
+                left: 441px;
             }
             
         }
@@ -63,7 +63,7 @@
                         font-size: 12px;
                     }
                     .loginBtn{
-                        background-color: #B2DFFC;
+                        background-color: #1783ca;
                         padding: 7px 5px;
                         color: white;
                         font-size: 14px;
@@ -74,6 +74,11 @@
                         margin-top: 10px;
                         margin-bottom: 18px;
                         cursor: pointer;
+
+                        &:disabled{
+                            background-color: #67b7ec;
+                            cursor: not-allowed;
+                        }
                     }    
                 }
                 .horizontalLine{
