--- a/client/src/components/statusBox/statusBox.scss
+++ b/client/src/components/statusBox/statusBox.scss
@@ -1,19 +1,42 @@
 @import '../../gobals';
 .statusBox{
-    width: 100%;
+    width: 562px;
     border: 1px solid lightgrey;
-    padding: 22px;
     background-color: white;
-    display: flex;
     margin-bottom: 20px;
-    box-sizing: border-box;
+    padding: 13px 22px;
+    position: relative;
+    overflow: hidden;
 
+    .arrow{
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background-color: lightgray;  
+        border-radius: 50%;
+        cursor: pointer;
+        z-index: 99;
+    }
+    .leftArrowIcon{
+        left: 0;
+        margin-left: 7px;
+    }
+    .rightArrowIcon{
+        right: 0;
+        margin-right: 7px;
+    }
+    .statusBoxWrapper{
+        width: 100%;
+        display: flex;
+        transition: all 1s ease;
+    }
     .statusImgContainer{
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-right: 15px;
         cursor: pointer;
+        margin: 0px 12px;
         .statusImg{
             width: 70px;
             height: 70px;
