--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -3,6 +3,11 @@
 .navbar{
     height: 60px;
     border-bottom: 1px solid lightgrey;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 999;
     .wrapper{
         display: flex;
         align-items: center;
