--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -8,6 +8,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
+    top: 60px;
 
     .homeNav{
         width: 100%;
