fixed some issues

--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -73,7 +73,7 @@
                 }
 
             }
-            .profile{
+            .navProfile{
                 .profilePic{
                     height: 25px;
                     width: 25px;
