--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -1,6 +1,8 @@
 @import '../../gobals';
 .profile{
     width: 100%;
+    position: relative;
+    top: 60px;
 
     .mainWrapper{
         width: 100%;
