--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -34,6 +34,9 @@
                 border: none;
                 font-size: 16px;
                 background-color: rgb(248, 246, 246);
+                &:focus{
+                    outline: none;
+                }
             }
         }
         .right{
