--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -67,7 +67,7 @@
                         font-size: 12px;
                     }
                     .loginBtn{
-                        background-color: #B2DFFC;
+                        background-color: #2c7eb4;
                         padding: 7px 5px;
                         color: white;
                         font-size: 14px;
